--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -40,7 +41,12 @@ dependencies {
 
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
 
+    //Preferences
     compile 'com.orhanobut:hawk:2.0.1'
+
+    //EventBus
+    compile 'com.squareup:otto:1.3.8'
+    //compile 'de.greenrobot:eventbus:2.4.0'
 
     //ButterKnife
     compile 'com.jakewharton:butterknife:8.8.1'
