--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,7 @@ dependencies {
     compile 'com.orhanobut:hawk:2.0.1'
 
     //EventBus
-    compile 'com.squareup:otto:1.3.8'
-    //compile 'de.greenrobot:eventbus:2.4.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
     //ButterKnife
     compile 'com.jakewharton:butterknife:8.8.1'
